--- a/src/main/resources/templates/admin/lms/question/answers.html
+++ b/src/main/resources/templates/admin/lms/question/answers.html
@@ -55,7 +55,7 @@
                 [
                     {type: 'checkbox'},
                     {field: "id", title: '序号', minWidth: 40,},
-                    {field: 'questionId', title: '答题室ID', minWidth: 40},
+                    {field: 'questionId', title: '答题ID', minWidth: 40},
                     {field: 'content', title: '答案内容', minWidth: 80, edit: 'text'},
                     {
                         field: 'verify', title: '答案校验', minWidth: 40, align: 'center', templet: function (d) {
