--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -70,7 +70,7 @@
 
 <!-- 尾部信息 -->
 <div th:fragment="footer">
-    <div class="layui-footer layui-container">
+    <div class="layui-footer">
         <p>© 2025 <a href="#" target="_blank" style="color: #3498db; text-decoration: none;">做题吧</a> 版权所有 | 冀ICP备12345678号</p>
     </div>
     <!-- 移动端遮罩 -->
