--- a/src/main/resources/templates/admin/lms/exam/edit.html
+++ b/src/main/resources/templates/admin/lms/exam/edit.html
@@ -36,8 +36,8 @@
         <div class="layui-form-item" pane="">
             <label class="layui-form-label">状态</label>
             <div class="layui-input-block">
-                <input type="radio" name="enabled" value="true" title="正常"/>
-                <input type="radio" name="enabled" value="false" title="冻结" checked/>
+                <input type="radio" name="enabled" value="true" title="正常" checked/>
+                <input type="radio" name="enabled" value="false" title="冻结"/>
             </div>
         </div>
         <div class="layui-form-item">
